--- a/schools/demo_docs/Student Applicant.json
+++ b/schools/demo_docs/Student Applicant.json
@@ -1,7 +1,6 @@
 [
 	{
 		"doctype": "Student Applicant",
-		"docstatus": 1,
 		"first_name": "Terina",
 		"last_name": "Condit",
 		"program": "Masters of Computer Applications",
@@ -12,10 +11,9 @@
 	},
 	{
 		"doctype": "Student Applicant",
-		"docstatus": 1,
 		"first_name": "Elena",
 		"last_name": "Gilbert",
-		"program": "Bachelor of Management Studies",
+		"program": "Masters of Computer Applications",
 		"date_of_birth": "1995-09-03",
 		"gender": "Female",
 		"blood_group": "O+",
@@ -23,7 +21,6 @@
 	},
 	{
 		"doctype": "Student Applicant",
-		"docstatus": 1,
 		"first_name": "Samuel",
 		"last_name": "Tucky",
 		"program": "Masters of Computer Applications",
@@ -34,7 +31,6 @@
 	},
 	{
 		"doctype": "Student Applicant",
-		"docstatus": 1,
 		"first_name": "Kate",
 		"last_name": "Rosalia",
 		"program": "Masters of Computer Applications",
@@ -45,10 +41,9 @@
 	},
 	{
 		"doctype": "Student Applicant",
-		"docstatus": 1,
 		"first_name": "Albert",
 		"last_name": "Wechsler",
-		"program": "Bachelor of Management Studies",
+		"program": "Masters of Computer Applications",
 		"date_of_birth": "1995-08-05",
 		"gender": "Male",
 		"blood_group": "A+",
@@ -56,13 +51,222 @@
 	},
 	{
 		"doctype": "Student Applicant",
-		"docstatus": 1,
 		"first_name": "Jerome",
 		"last_name": "Condit",
 		"program": "Masters of Computer Applications",
 		"date_of_birth": "1996-03-11",
 		"gender": "Male",
 		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Alberto",
+		"last_name": "Alvarez",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Reginald",
+		"last_name": "Thornton",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Danny",
+		"last_name": "Holloway",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Damon",
+		"last_name": "Walton",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Mary",
+		"last_name": "Graves",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Female",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Ignacio",
+		"last_name": "Boyd",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Female",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Latoya",
+		"last_name": "Baldwin",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Female",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Toby",
+		"last_name": "Jones",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Christy",
+		"last_name": "Wise",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Shawn",
+		"last_name": "Grant",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Male",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Melba",
+		"last_name": "Sanders",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1996-04-11",
+		"gender": "Female",
+		"blood_group": "A+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Floyd",
+		"last_name": "Mccoy",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Male",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Brett",
+		"last_name": "Roberts",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Kara",
+		"last_name": "Fisher",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Kelli",
+		"last_name": "Herrera",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Ernestine",
+		"last_name": "Rowe",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Cindy",
+		"last_name": "Murray",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Marjorie",
+		"last_name": "Obrien",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Percy",
+		"last_name": "Gilbert",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Jesse",
+		"last_name": "Nguyen",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
+		"application_status": "Applied"
+	},
+	{
+		"doctype": "Student Applicant",
+		"first_name": "Darrell",
+		"last_name": "Barton",
+		"program": "Masters of Computer Applications",
+		"date_of_birth": "1995-09-03",
+		"gender": "Female",
+		"blood_group": "O+",
 		"application_status": "Applied"
 	}
 ]
